cleaning depricated code, webserver api for service status
