# lib/webserver/controllers/proofController.ts
@@ -1,11 +1,12 @@
-import { Controller, Get, Path, Route, Tags } from "tsoa";
+import { Controller, Get, Path, Route, Tags, Request } from "tsoa";
 import { Factory, Inject, Singleton } from "typescript-ioc";
 import { DBVotingRoundResult } from "../../entity/attester/dbVotingRoundResult";
+import { ServiceStatus } from "../dto/ServiceStatus";
 import { SystemStatus } from "../dto/SystemStatus";
 import { VotingRoundResult } from "../dto/VotingRoundResult";
 import { ProofEngine } from "../engines/proofEngine";
 import { ApiResponse, handleApiResponse } from "../models/ApiResponse";
-
+import * as express from "express";
 
 @Tags('Proof')
 @Route("api/proof")
@@ -37,5 +38,24 @@ export class ProofController extends Controller {
         )
     }
 
+    @Get("service-status")
+    public async serviceStatus(
+    ): Promise<ApiResponse<ServiceStatus[]>> {
+        return handleApiResponse(
+            this.proofEngine.serviceStatus()
+        )
+    }
+
+    @Get("service-status-html")
+    public async serviceStatusHtml(
+        @Request() request: express.Request
+    ): Promise<string> {
+        let result = await this.proofEngine.serviceStatusHtml();
+        const response = (<any>request).res as express.Response;
+        this.setStatus(200);
+        response.contentType('text/html');
+        response.send(result).end();
+        return null; // Found via #44        
+    }
 
 }
